--- a/site.css
+++ b/site.css
@@ -1,5 +1,5 @@
 
-<!--
+/*
 Permission is hereby granted, free of charge, to any person
  obtaining a copy of this software and associated documentation
  files (the "Software"), to deal in the Software without
@@ -19,7 +19,8 @@ Permission is hereby granted, free of charge, to any person
  HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
  FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
- OTHER DEALINGS IN THE SOFTWARE.-->
+ OTHER DEALINGS IN THE SOFTWARE.
+*/
 <!--CSS displayed modifies the views of the website-->
 .indent{
 	text-indent:20px;
