--- a/site.css
+++ b/site.css
@@ -1,14 +1,40 @@
 
 /*CSS displayed modifies the views of the website*/
 .container{
-	
+	font-family: "Montserrat",sans-serif;
+}
+em{
+	color:#3ee6bf;
+}
+.name_tag{
+	position:absolute;
+	top: 40%;
+	left:25%;
+	width:340;
+	height:28;
+	text-align:center;
+	color:white;
+}
+.block_title{
+	text-align:center;
+	position:absolute;
+	top: 50%;
+	left:25%;
+	width:340;
+	height:41;
+	color:white;
 }
 .getintouch_tag{
-	width:50%;
-	height:50%;
+	position:absolute;
+	top: 70% ;
+    left:40%;
+	text-align:center;
+	width:140;
+	height:48;
+	color:white;
 }
 .left-element {
-    background: #33E5BB;
+     background-image: url("italy.jpeg");
     display: inline-block;
     position: fixed;
     left: 0;
@@ -27,18 +53,23 @@
     padding-bottom: 50px;
      
 }
+.header_tag{
+	padding-top:15;
+	padding-left:25px;
+}
 .who-info{
-	padding-top: 25;
+	padding-top: 10;
 	padding-left: 25;
 	padding-bottom: 15;
 }
 .what-info{
-	 padding-top: 25px;
+	 padding-top: 10px;
 	 padding-left: 25;
 	 padding-bottom: 15;
 }
+
 .when-info{
-	 padding-top: 25px;
+	 padding-top:10;
 	 padding-left: 25;
 	 padding-bottom: 15;
 }
