Added links to Social Media Icons

--- a/site.css
+++ b/site.css
@@ -29,6 +29,13 @@
 	top: 80%;
 	right: 35%;
 }
+.instagam_tag{
+	position:absolute;		
+	width:50%;
+	top:80%;
+	right:#;
+
+}
 em{
 	color:#3ee6bf;
 }
