--- a/site.css
+++ b/site.css
@@ -83,9 +83,8 @@ em {
 }
 /*Contain the image of myself*/
 .left-element {
-    background-image: url("Ethan.jpg");
-	background-size: 650px 750px;
-	
+    background-image: url('Icons/background.jpg');
+	background-size: cover;
     display: inline-block;
     position: fixed;
     left: 0;
@@ -133,6 +132,13 @@ p {
 }
 a:hover {
     background-color: blue;
+}
+a{
+	text-decoration: none;
+	color: white;
+}
+b{
+	text-indent: 50px;
 }
 /*background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #0085ff), color-stop(0.15, #8dc8ff), color-stop(0.3,#ffffff));
  
